--- a/app/styles/components/ListView.css
+++ b/app/styles/components/ListView.css
@@ -8,6 +8,7 @@
   border: 1px solid var(--color-border);
   border-radius: 10px;
   padding: 10px 12px;
+  margin: 1rem 1.5rem; /* Padding přesunutý z tile-layout__content */
   display: flex;
   flex-direction: column;
   gap: 8px;
