--- a/app/styles/components/DetailView.css
+++ b/app/styles/components/DetailView.css
@@ -4,10 +4,11 @@
 
 .detail-view {
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto minmax(0, 1fr);
   flex: 1 1 0;
   min-height: 0;
   min-width: 0;
+  height: 100%;
 }
 
 .detail-view__content {
