--- a/app/styles/components/AppShell.css
+++ b/app/styles/components/AppShell.css
@@ -66,6 +66,7 @@
   display: flex;
   flex-direction: column;
   min-height: 0;
+  height: 100%;
 }
 
 /* SIDEBAR: vynutit, že obsah actions řádku nebude nalepený */
