--- a/app/styles/components/ListView.css
+++ b/app/styles/components/ListView.css
@@ -66,6 +66,19 @@
   max-height: calc(100vh - 250px); /* pevná výška místo flex: 1 */
 }
 
+/* Detail obsah: výška tabulky se má řídit kontejnrem, ne viewportem */
+.detail-view__content .listview,
+.detail-subdetail__content .listview {
+  flex: 1 1 0;
+  min-height: 0;
+}
+
+.detail-view__content .listview__table-wrapper,
+.detail-subdetail__content .listview__table-wrapper {
+  max-height: 100%;
+  height: 100%;
+}
+
 /* Jemnější tabulka (méně “krabic”) */
 .generic-type__table {
   border-collapse: separate;
