Fix: Disable scroll on detail-view__content when ListView is nested inside

--- a/app/styles/components/DetailView.css
+++ b/app/styles/components/DetailView.css
@@ -23,7 +23,7 @@
   flex-direction: column;
 }
 
-/* Pokud detail-view__content obsahuje přímo listview, nesmí scrollovat */
-.detail-view__content:has(> .listview) {
+/* Pokud detail-view__content obsahuje listview (i zanořený), nesmí scrollovat */
+.detail-view__content:has(.listview) {
   overflow: hidden;
 }
